# MyBitwise

./: .gitignore  CMakeLists.txt  Readme.md
SysLang/: CMakeLists.txt  Readme.md
SysLang/App/: CMakeLists.txt
SysLang/App/source/: main.c
SysLang/Lib/: CMakeLists.txt
SysLang/Lib/include/syl/: dir.h  flag.h  path.h  target.h  type.h
SysLang/Lib/include/syl/ast/: ast.h
SysLang/Lib/include/syl/common/: arena.h  buffer.h  file.h  hash.h  intern.h  log.h  map.h  memory.h  string_intern.h  string_util.h  value.h
SysLang/Lib/include/syl/lex/: keywords.h  scan.h  token.h
SysLang/Lib/include/syl/parse/: parse.h
SysLang/Lib/include/syl/resolve/: package.h  symbol.h
SysLang/Lib/source/: dir.c  flag.c  path.c  target.c  type.c
SysLang/Lib/source/common/: arena.c  buffer.c  file.c  hash.c  intern.c  log.c  map.c  memory.c  string_intern.c  string_util.c  value.c
SysLang/Lib/source/lex/: keywords.c  scan.c  token.c
SysLang/Lib/source/parse/: parse.c
SysLang/Lib/source/resolve/: package.c  resolve.c
SysLang/Test/: CMakeLists.txt
SysLang/Test/include/: testy.h
SysLang/Test/source/: flag_test.c  main.c  path_test.c  target_test.c  testy.h
SysLang/Test/source/common/: arena_test.c  buffer_test.c  hash_test.c  intern_test.c  map_test.c  memory_test.c  string_intern_test.c  string_util_test.c
SysLang/Test/source/lex/: keywords_test.c  scan_test.c
SysLang/source/common/: buffer.h  memory.h  string_intern.h
